Fixing bugs, (maybe added more configs not too sure.)